--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,17 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/angular-datatables/dist/angular-datatables.js"
+            ]
           },
           "configurations": {
             "production": {
