--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-select/ng-select": "^2.9.0",
+    "angular-6-datatable": "^0.8.0",
     "angular-datatables": "^0.6.4",
     "angular-file-uploader": "^4.1.3",
     "bootstrap": "^4.1.3",
@@ -29,12 +30,14 @@
     "datatables.net-dt": "^1.10.19",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "ng-multiselect-dropdown": "^0.2.1",
     "ngx-bootstrap": "^3.0.1",
     "ngx-image-cropper": "^1.0.2",
     "ngx-perfect-scrollbar": "^6.3.1",
     "ngx-toastr": "^9.0.2",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.3.2",
+    "rxjs-compat": "^6.3.2",
     "sweetalert2": "^7.26.29",
     "zone.js": "^0.8.26"
   },
@@ -47,6 +50,7 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.8",
+    "@types/lodash": "^4.14.116",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
