--- a/angular.json
+++ b/angular.json
@@ -23,15 +23,17 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.css",
+              "node_modules/datatables.net-dt/css/jquery.dataTables.css",
               "node_modules/font-awesome/css/font-awesome.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/ngx-toastr/toastr.css",
-              "node_modules/@ng-select/ng-select/themes/default.theme.css",
-              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
-
+              "node_modules/@ng-select/ng-select/themes/default.theme.css"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.js",
+              "node_modules/datatables.net/js/jquery.dataTables.js"
             ]
           },
           "configurations": {
