--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
     "@angular/router": "^6.0.3",
     "@ng-select/ng-select": "^2.9.0",
     "angular-6-datatable": "^0.8.0",
+    "angular-d3-charts": "^5.0.0",
+    "angular-datatables": "^6.0.0",
     "angular-file-uploader": "^4.1.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "datatables.net": "^1.10.19",
+    "datatables.net-dt": "^1.10.19",
     "font-awesome": "^4.7.0",
+    "highcharts": "^6.1.3",
+    "highcharts-angular": "^2.1.3",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "ng-multiselect-dropdown": "^0.2.1",
     "ngx-bootstrap": "^3.0.1",
@@ -45,7 +52,7 @@
     "@types/datatables.net": "^1.10.13",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.8",
+    "@types/jquery": "^3.3.9",
     "@types/lodash": "^4.14.116",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
