--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "angular-d3-charts": "^5.0.0",
     "angular-datatables": "^6.0.0",
     "angular-file-uploader": "^4.1.3",
+    "angularfire2": "^5.0.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
+    "firebase": "^5.5.1",
     "font-awesome": "^4.7.0",
     "highcharts": "^6.1.3",
     "highcharts-angular": "^2.1.3",
