--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "angular-d3-charts": "^5.0.0",
     "angular-datatables": "^6.0.0",
     "angular-file-uploader": "^4.1.3",
+    "angular-highcharts": "^6.2.6",
     "angularfire2": "^5.0.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -32,8 +33,7 @@
     "datatables.net-dt": "^1.10.19",
     "firebase": "^5.5.1",
     "font-awesome": "^4.7.0",
-    "highcharts": "^6.1.3",
-    "highcharts-angular": "^2.1.3",
+    "highcharts": "^6.1.4",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "ng-multiselect-dropdown": "^0.2.1",
@@ -52,6 +52,7 @@
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/datatables.net": "^1.10.13",
+    "@types/highcharts": "^5.0.29",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.9",
