--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/pwa": "^0.8.3",
     "@angular/router": "^6.0.3",
     "@ng-select/ng-select": "^2.9.0",
     "angular-6-datatable": "^0.8.0",
@@ -37,6 +38,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "ng-multiselect-dropdown": "^0.2.1",
+    "ng-social": "^1.0.0",
     "ngx-bootstrap": "^3.0.1",
     "ngx-image-cropper": "^1.0.2",
     "ngx-perfect-scrollbar": "^6.3.1",
@@ -44,7 +46,8 @@
     "rxjs": "^6.3.2",
     "rxjs-compat": "^6.3.2",
     "sweetalert2": "^7.26.29",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "@angular/service-worker": "^6.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
